# workout-calendar

./: Cargo.toml  README.md
.github/workflows/: validate.yml
client/: Cargo.toml
client/src/: lib.rs  utils.rs
server/: Cargo.toml
server/data/: index.js  sitemap.xml
server/data/css/: style.css
server/src/: main.rs  youtube.rs
server/templates/: root.hbs
server/templates/pages/: calendar.hbs
