[package]
name = "client"
authors = ["Zageron <hello@adambryant.ca>"]
description = "WASM module for statically generated site."
repository = "https://github.com/Zageron/workout-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.55"
log = { version = "0.4.14", features = ["release_max_level_off"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.55"
features = [
    'DataTransfer',
    'Document',
    'DomTokenList',
    'DragEvent',
    'Element',
    'Event',
    'EventTarget',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'NodeList',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
