[package]
name = "workout-calendar-server"
authors = ["Zageron <hello@adambryant.ca>"]
description = "actix-web driven static site generator."
repository = "https://github.com/Zageron/workout-calendar"
version = "0.0.1"
edition = "2021"


[dependencies]
actix-files = "0.6.0-beta.16"
actix-http = "3.0.0-rc.1"
actix-service = "2.0.2"
actix-web = "4.0.0-rc.2"
anyhow = "1.0.53"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-core = "0.3.19"
futures-util = "0.3.19"
google-youtube3 = "2.0.10"
handlebars = { version = "4.2.1", features = ["dir_source"] }
json_value_merge = "1.1.2"
maplit = "1.0.2"
mime = "0.3.16"
mongodb = "2.1.0"
ory-kratos-client = "0.8.2-alpha.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
url = "2.2.2"
